--- a/GazeChim/ClientApp/package.json
+++ b/GazeChim/ClientApp/package.json
@@ -10,17 +10,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.1.4",
+    "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.1.4",
+    "@angular/core": "^15.2.8",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@capacitor-community/barcode-scanner": "^3.0.1",
     "@capacitor-community/native-audio": "^3.0.4",
-    "@capacitor/android": "^4.6.3",
+    "@capacitor/android": "^4.8.0",
     "@capacitor/angular": "^2.0.3",
     "@capacitor/core": "^4.7.0",
     "@capacitor/dialog": "^4.1.0",
@@ -29,7 +31,7 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@ionic/angular": "^6.6.0",
+    "@ionic/angular": "^6.7.4",
     "@ionic/angular-toolkit": "^8.0.0",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.2",
@@ -38,6 +40,8 @@
     "graphql": "^16",
     "ngx-toastr": "^16.0.2",
     "node-sass": "^8.0.0",
+    "primeng": "^14.2.5-lts",
+    "primeng-extensions-wizard": "^2.2.0",
     "rxjs": "~7.5.0",
     "timeline-angular": "^1.0.3",
     "timelinejs": "^2.35.6",
